--- a/example-configs/config-recommended-ipad-4x3-multirate.yml
+++ b/example-configs/config-recommended-ipad-4x3-multirate.yml
@@ -31,7 +31,7 @@ source_command: 'cat %s'
 segmenter_binary: './live_segmenter'
 
 # the encoding profile to use
-encoding_profile: [ 'cell_4x3_150k', 'cell_4x3_240k', 'cell_4x3_440k', 'wifi_4x3_640k', 'wifi_4x3_840k', 'wifi_4x3_1240k' ]
+encoding_profile: [ 'cell_4x3_150k', 'cell_4x3_240k', 'cell_4x3_440k', 'wifi_4x3_640k', 'wifi_4x3_1240k', 'wifi_4x3_1840k', 'wifi_4x3_2540k', 'wifi_4x3_4540k' ]
 
 # The upload profile to use
 transfer_profile: 'copy_dev'
@@ -39,29 +39,37 @@ transfer_profile: 'copy_dev'
 #
 # Encoding profiles
 #
-cell_4x3_150k: 
-  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -s 400x300 -vcodec libx264 -b 110k -flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -subq 7 -trellis 1 -refs 5 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 110k -maxrate 110k -bufsize 110k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 4:3 -r 10 -g 30 -async 2 - | %s %s %s %s %s"
+cell_4x3_150k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=400:-1 -vcodec libx264 -threads 0 -profile baseline -level 30 -preset medium -b 110k -maxrate 110k -bufsize 110k -r 10 -keyint_min 10 -g 30 -async 2 - | %s %s %s %s %s"
   bandwidth: 158000
 
-cell_4x3_240k: 
-  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -s 400x300 -vcodec libx264 -b 200k -flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -subq 7 -trellis 1 -refs 5 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 200k -maxrate 200k -bufsize 200k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 4:3 -r 15 -g 45 -async 2 - | %s %s %s %s %s"
+cell_4x3_240k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=400:-1 -vcodec libx264 -threads 0 -profile baseline -level 30 -preset medium -b 200k -maxrate 200k -bufsize 200k -r 12 -keyint_min 12 -g 45 -async 2 - | %s %s %s %s %s"
   bandwidth: 248000
 
-cell_4x3_440k: 
-  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -s 400x300 -vcodec libx264 -b 400k -flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -subq 7 -trellis 1 -refs 5 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 400k -maxrate 400k -bufsize 400k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 4:3 -r 30 -g 90 -async 2 - | %s %s %s %s %s"
+cell_4x3_440k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=400:-1 -vcodec libx264 -threads 0 -profile baseline -level 30 -preset medium -b 400k -maxrate 400k -bufsize 400k -keyint_min 25 -g 90 -async 2 - | %s %s %s %s %s"
   bandwidth: 448000
 
-wifi_4x3_640k: 
-  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -s 640x480 -vcodec libx264 -b 600k -flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -subq 7 -trellis 1 -refs 5 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 600k -maxrate 600k -bufsize 600k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 4:3 -r 30 -g 90 -async 2 - | %s %s %s %s %s"
+wifi_4x3_640k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=640:-1 -vcodec libx264 -threads 0 -profile baseline -level 30 -preset medium -b 600k -maxrate 600k -bufsize 600k -keyint_min 25 -g 90 -async 2 - | %s %s %s %s %s"
   bandwidth: 648000
 
-wifi_4x3_840k: 
-  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -s 640x480 -vcodec libx264 -b 800k -flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -subq 7 -trellis 1 -refs 5 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 800k -maxrate 800k -bufsize 800k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 4:3 -r 30 -g 90 -async 2 - | %s %s %s %s %s"
-  bandwidth: 848000
-
-wifi_4x3_1240k: 
-  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -s 640x480 -vcodec libx264 -b 1200k -flags +loop+mv4 -cmp 256 -partitions +parti4x4+partp8x8+partb8x8 -subq 7 -trellis 1 -refs 5 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 1200k -maxrate 1200k -bufsize 1200k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 4:3 -r 30 -g 90 -async 2 - | %s %s %s %s %s"
+wifi_4x3_1240k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=640:-1 -vcodec libx264 -threads 0 -profile main -level 31 -preset medium -b 1200k -maxrate 1200k -bufsize 1200k -keyint_min 25 -g 90 -async 2 - | %s %s %s %s %s"
   bandwidth: 1248000
+
+wifi_4x3_1840k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=960:-1 -vcodec libx264 -threads 0 -profile main -level 31 -preset medium -b 1800k -maxrate 1800k -bufsize 1800k -keyint_min 25 -g 90 -async 2 - | %s %s %s %s %s"
+  bandwidth: 1848000
+
+wifi_4x3_2540k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=960-1 -vcodec libx264 -threads 0 -profile main -level 31 -preset medium -b 2500k -maxrate 2500k -bufsize 2500k -keyint_min 25 -g 90 -async 2 - | %s %s %s %s %s"
+  bandwidth: 2548000
+
+wifi_4x3_4540k:
+  ffmpeg_command: "ffmpeg -er 4 -i %s -f mpegts -acodec libmp3lame -ar 32000 -ab 48k -vf scale=1280:-1 -vcodec libx264 -threads 0 -profile main -level 31 -preset medium -b 4500k -maxrate 4500k -bufsize 4500k -keyint_min 25 -g 90 -async 2 - | %s %s %s %s %s"
+  bandwidth: 4548000
 
 #
 # Transfer profiles
@@ -80,9 +88,18 @@ ftp_dev:
   password: 'pass'
   directory: 'html/streamingvideo'
 
+## Multiple ftp server example:
+multi_ftp_dev:
+  transfer_type: 'ftp'
+  remote_host: ['first-server.com', 'second-server.com']
+  user_name: ['firstserveruser', 'seconduserserver']
+  password: ['firstserverpass', 'secondserverpass']
+  directory: ['first/server/dir', 'second/server/dir']
+### If the remote_host is an array, all the other (user_name, password, directory) has to be arrays to, and has to have the same item number as the remote_host array, else it won't work and bad things will happen!
+
 scp_dev:
   transfer_type: 'scp'
-  remote_host: '192.168.1.1.'
+  remote_host: '192.168.1.1'
   user_name: 'root'
   #password: 'pass'
   directory: '/web/sites/test.com/html/streamingvideo'
@@ -90,3 +107,11 @@ scp_dev:
 copy_dev:
   transfer_type: 'copy'
   directory: '/var/www/html/streamingvideo'
+  
+cf_dev:
+  transfer_type: 'cf'
+  container: 'container'
+  username: 'username'
+  api_key: 'api_key'
+  key_prefix: 'stream0001'
+  
