--- a/example-configs/config-restream-simple.yml
+++ b/example-configs/config-restream-simple.yml
@@ -19,7 +19,7 @@ segment_length: 10
 # if this location is the same as the location where the m3u8 
 # index is then leave it blank
 # url_prefix: ''
-url_prefix: 'http://192.168.132.15/streamingvideo/'
+url_prefix: 'http://192.168.1.1/streamingvideo/'
 
 # how many segments to keep in the index
 index_segment_count: 15
@@ -31,8 +31,8 @@ source_command: 'ffmpeg -er 4 -y -i %s -vcodec copy -acodec copy -f ogg -'
 segmenter_binary: './live_segmenter'
 
 # the encoding profile to use
-#encoding_profile: [ 'ep_128k' ] # <- you can force this to do two passes if you want
-encoding_profile: 'ep_128k'
+#encoding_profile: [ 'ep_192k' ] # <- you can force this to do two passes if you want
+encoding_profile: 'ep_192k'
 
 # The upload profile to use
 transfer_profile: 'copy_dev'
@@ -40,17 +40,17 @@ transfer_profile: 'copy_dev'
 #
 # Encoding profiles
 #
-ep_128k: 
-  ffmpeg_command: "ffmpeg -er 4 -y -i %s -f mpegts -acodec libmp3lame -ar 48000 -ab 64k -s 320x240 -vcodec libx264 -b 128k -flags +loop -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8 -subq 5 -trellis 1 -refs 1 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 128k -maxrate 128k -bufsize 128k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 320:240 -g 30 -async 2 - | %s %s %s %s %s"
-  bandwidth: 128000
+ep_192k:
+  ffmpeg_command: "ffmpeg -er 4 -y -i %s -f mpegts -acodec libmp3lame -ab 64k -vf scale=320:240 -vcodec libx264 -threads 0 -preset fast -b 128k -maxrate 128k -bufsize 128k -g 30 -async 2 - | %s %s %s %s %s"
+  bandwidth: 192000
 
-ep_386k: 
-  ffmpeg_command: "ffmpeg -er 4 -y -i %s -f mpegts -acodec libmp3lame -ar 48000 -ab 64k -s 320x240 -vcodec libx264 -b 386k -flags +loop -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8 -subq 5 -trellis 1 -refs 1 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 386k -maxrate 386k -bufsize 386k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 320:240 -g 30 -async 2 - | %s %s %s %s %s"
-  bandwidth: 386000
+ep_348k:
+  ffmpeg_command: "ffmpeg -er 4 -y -i %s -f mpegts -acodec libmp3lame -ab 96k -vf scale=320:240 -vcodec libx264 -threads 0 -preset fast -b 256k -maxrate 256k -bufsize 256k -g 30 -async 2 - | %s %s %s %s %s"
+  bandwidth: 348000
 
-ep_512k: 
-  ffmpeg_command: "ffmpeg -er 4 -y -i %s -f mpegts -acodec libmp3lame -ar 48000 -ab 64k -s 320x240 -vcodec libx264 -b 512k -flags +loop -cmp +chroma -partitions +parti4x4+partp8x8+partb8x8 -subq 5 -trellis 1 -refs 1 -coder 0 -me_range 16 -keyint_min 25 -sc_threshold 40 -i_qfactor 0.71 -bt 512k -maxrate 512k -bufsize 512k -rc_eq 'blurCplx^(1-qComp)' -qcomp 0.6 -qmin 10 -qmax 51 -qdiff 4 -level 30 -aspect 320:240 -g 30 -async 2 - | %s %s %s %s %s"
-  bandwidth: 512000
+ep_576k:
+  ffmpeg_command: "ffmpeg -er 4 -y -i %s -f mpegts -acodec libmp3lame -ab 128k -vf scale=320:240 -vcodec libx264 -threads 0 -preset fast -b 448k -maxrate 448k -bufsize 448k -g 30 -async 2 - | %s %s %s %s %s"
+  bandwidth: 576000
 
 #
 # Transfer profiles
@@ -69,6 +69,15 @@ ftp_dev:
   password: 'pass'
   directory: 'html/streamingvideo'
 
+## Multiple ftp server example:
+multi_ftp_dev:
+  transfer_type: 'ftp'
+  remote_host: ['first-server.com', 'second-server.com']
+  user_name: ['firstserveruser', 'seconduserserver']
+  password: ['firstserverpass', 'secondserverpass']
+  directory: ['first/server/dir', 'second/server/dir']
+### If the remote_host is an array, all the other (user_name, password, directory) has to be arrays to, and has to have the same item number as the remote_host array, else it won't work and bad things will happen!
+
 scp_dev:
   transfer_type: 'scp'
   remote_host: '192.168.1.1'
@@ -79,3 +88,11 @@ scp_dev:
 copy_dev:
   transfer_type: 'copy'
   directory: '/var/www/html/streamingvideo'
+  
+cf_dev:
+  transfer_type: 'cf'
+  container: 'container'
+  username: 'username'
+  api_key: 'api_key'
+  key_prefix: 'stream0001'
+  
