--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ cmake_minimum_required(VERSION 2.6)
 include(detectFFMpeg.cmake)
 
 
-add_executable(segmenter segmenter.c)
+add_executable(segmenter segmenter.c options_parsing.c)
 target_link_libraries(segmenter -lavformat -lavcodec -lavutil ${FFMPEG_LIBS})
